// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots should match snapshot with all skins 1`] = `
.c0 {
  font-size: 0.875rem;
  font-size: 0.875rem;
  padding: 4px 12px 4px 12px;
  cursor: pointer;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fdfdfd;
  border: none;
  border-radius: 4px;
  background-color: #999;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 2`] = `
.c0 {
  font-size: 0.875rem;
  font-size: 0.875rem;
  padding: 4px 12px 4px 12px;
  cursor: pointer;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fdfdfd;
  border: none;
  border-radius: 4px;
  background-color: #999;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 3`] = `
.c0 {
  font-size: 0.875rem;
  font-size: 1rem;
  padding: 8px 16px 8px 16px;
  cursor: pointer;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fdfdfd;
  border: none;
  border-radius: 4px;
  background-color: #999;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 4`] = `
.c0 {
  font-size: 0.875rem;
  font-size: 1.275rem;
  padding: 12px 20px 12px 20px;
  cursor: pointer;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fdfdfd;
  border: none;
  border-radius: 4px;
  background-color: #999;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 5`] = `
.c0 {
  font-size: 0.875rem;
  font-size: 0.875rem;
  padding: 4px 12px 4px 12px;
  cursor: pointer;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fdfdfd;
  border: none;
  border-radius: 4px;
  background-color: #999;
  width: 100%;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 6`] = `
.c0 {
  font-size: 0.875rem;
  font-size: 0.875rem;
  padding: 4px 12px 4px 12px;
  cursor: pointer;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fdfdfd;
  border: none;
  border-radius: 4px;
  background-color: #008d96;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 7`] = `
.c0 {
  font-size: 0.875rem;
  font-size: 0.875rem;
  padding: 4px 12px 4px 12px;
  cursor: pointer;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fdfdfd;
  border: none;
  border-radius: 4px;
  background-color: #25387f;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 8`] = `
.c0 {
  font-size: 0.875rem;
  font-size: 0.875rem;
  padding: 4px 12px 4px 12px;
  cursor: pointer;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fdfdfd;
  border: none;
  border-radius: 4px;
  background-color: #50a47f;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 9`] = `
.c0 {
  font-size: 0.875rem;
  font-size: 0.875rem;
  padding: 4px 12px 4px 12px;
  cursor: pointer;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fdfdfd;
  border: none;
  border-radius: 4px;
  background-color: #cd9447;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 10`] = `
.c0 {
  font-size: 0.875rem;
  font-size: 0.875rem;
  padding: 4px 12px 4px 12px;
  cursor: pointer;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fdfdfd;
  border: none;
  border-radius: 4px;
  background-color: #f44336;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 11`] = `
.c0 {
  font-size: 0.875rem;
  font-size: 0.875rem;
  padding: 4px 12px 4px 12px;
  cursor: pointer;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fdfdfd;
  border: none;
  border-radius: 4px;
  background-color: #999;
  cursor: not-allowed;
  color: #a8a8a8;
  background-color: #f2f2f2;
}

<div>
  <button
    class="c0"
    disabled=""
  >
    Button
  </button>
</div>
`;
